# github-trending-cli

./: README.md  main.py  pyproject.toml
